Add apoio Hadi.com.

--- a/index.html
+++ b/index.html
@@ -154,37 +154,42 @@
             <div class="container">
                 <h2 class="subtitle">Apoio</h2>
                 <h4>Institucional</h4>
-                <ul class="sponsors-list">
-                  <li class="sponsor-item">
-                    <a href="http://ftec.com.br" title="FTEC" class="sponsor-logo sponsor-link" target="_blank">
+                <ul class="apoio-list">
+                  <li class="apoio-item">
+                    <a href="http://ftec.com.br" title="FTEC" class="apoio-logo apoio-link" target="_blank">
                       <img src="images/ftec.png" alt="FTEC" class="photo"/>
                     </a>
                   </li>
-                  <li class="sponsor-item">
-                    <a href="http://www.trinopolo.com.br/" title="Trino Polo" class="sponsor-logo sponsor-link" target="_blank">
+                  <li class="apoio-item">
+                    <a href="http://www.trinopolo.com.br/" title="Trino Polo" class="apoio-logo apoio-link" target="_blank">
                       <img src="images/trinopolo.png" alt="Trino Polo" class="photo"/>
                     </a>
                   </li>
                 </ul>
                 <h4>Patrocínio</h4>
-                <ul class="sponsor-item">
-                  <li class="sponsor-item">
-                    <a href="http://www.arrivaregestao.com.br/" title="Arrivare" class="sponsor-logo sponsor-link" target="_blank">
+                <ul class="apoio-item">
+                  <li class="apoio-item">
+                    <a href="http://www.arrivaregestao.com.br/" title="Arrivare" class="apoio-logo apoio-link" target="_blank">
                       <img src="images/arrivare.png" alt="Arrivare" class="photo"/>
                     </a>
                   </li>
-                  <li class="sponsor-item">
-                    <a href="http://www.flexxo.com.br/" title="Flexxo" class="sponsor-logo sponsor-link" target="_blank">
+                  <li class="apoio-item">
+                    <a href="http://www.flexxo.com.br/" title="Flexxo" class="apoio-logo apoio-link" target="_blank">
                       <img src="images/flexxo.png" alt="Flexxo" class="photo"/>
                     </a>
                   </li>
-                  <li class="sponsor-item">
-                    <a href="http://www.integrasul.com.br/" title="Integrasul" class="sponsor-logo sponsor-link" target="_blank">
+                  <li class="apoio-item">
+                    <a href="http://www.hadi.com.br/" title="Hadi.com" class="apoio-logo apoio-link" target="_blank">
+                      <img src="images/hadi.png" alt="Hadi.com" class="photo"/>
+                    </a>
+                  </li>
+                  <li class="apoio-item">
+                    <a href="http://www.integrasul.com.br/" title="Integrasul" class="apoio-logo apoio-link" target="_blank">
                       <img src="images/integrasul.png" alt="Integrasul" class="photo"/>
                     </a>
                   </li>
-                  <li class="sponsor-item">
-                    <a href="http://goo.gl/eLSqYm" title="Seja um patrocinador" class="sponsor-logo sponsor-link">
+                  <li class="apoio-item">
+                    <a href="http://goo.gl/eLSqYm" title="Seja um patrocinador" class="apoio-logo apoio-link" target="_blank">
                       <span class="glyphicon glyphicon-plus"></span>
                     </a>
                   </li>
@@ -205,7 +210,7 @@
                 </div>
             </div>
             <div class="github">
-                <a href="https://github.com/TcheLinux/caxias2014">
+                <a href="https://github.com/TcheLinux/caxias2014" target="_brank">
                     <img src="images/GitHub-Mark-32px.png"/>
                     <p class="copyright text-muted small">Acesse o TchêLinux Caxias do Sul 2014 no GitHub</p>
                 </a>
