Add grade de palestras.

--- a/index.html
+++ b/index.html
@@ -96,42 +96,70 @@
         <section id="programacao">
         <div class="container">
           <h2 class="subtitle">Programação</h2>
-            <p>
-                A relação de palestras será atualizada à medida que os palestrantes são confirmados.
-            </p>
-            <p>Em breve...</p>
-            <!--
             <div class="schedule-tbl">
               <table class="table table-responsive">
                 <thead>
                   <tr>
-                    <th class="schedule-time">Time</th>
-                    <th class="schedule-slot">Slot</th>
-                    <th class="schedule-description">Description</th>
+                    <th class="schedule-time">Horário</th>
+                    <th class="schedule-slot">Auditório</th>
+                    <th class="schedule-description">Sala 1</th>
                   </tr>
                 </thead>
                 <tbody>
                   <tr class="schedule-other">
+                    <td class="schedule-time">8h30</td>
+                    <td class="schedule-slot">Recepção / Credenciamento
+                    </td>
+                    <td class="schedule-description">-
+                    </td>
+                  </tr>
+
+                  <tr class="schedule-other">
                     <td class="schedule-time">9h00</td>
-                    <td class="schedule-slot">Recepção</td>
+                    <td class="schedule-slot">Abertura
+                    </td>
+                    <td class="schedule-description">-
+                    </td>
+                  </tr>
+
+                  <tr class="schedule-other">
+                    <td class="schedule-time">09h15</td>
+                    <td class="schedule-slot">-</td>
                     <td class="schedule-description">-</td>
                   </tr>
-                
+
                   <tr class="schedule-other">
-                    <td class="schedule-time">15h10</td>
-                    <td class="schedule-slot">Coffee Break</td>
-                    <td class="schedule-description">-</td>
+                    <td class="schedule-time">10h00</td>
+                    <td class="schedule-slot">-</td>
+                    <td class="schedule-slot">-</td>
                   </tr>
-                
+
                   <tr class="schedule-other">
-                    <td class="schedule-time">18h20</td>
+                    <td class="schedule-time">10h45</td>
+                    <td class="schedule-slot">-</td>
+                    <td class="schedule-slot">-</td>
+                  </tr>
+
+                  <tr class="schedule-other">
+                    <td class="schedule-time">11h30</td>
+                    <td class="schedule-slot">-</td>
+                    <td class="schedule-slot">-</td>
+                  </tr>
+
+                  <tr class="schedule-other">
+                    <td class="schedule-time">12h15</td>
+                    <td class="schedule-slot">-</td>
+                    <td class="schedule-slot">-</td>
+                  </tr>
+
+                  <tr class="schedule-other">
+                    <td class="schedule-time">13h00</td>
                     <td class="schedule-slot">Encerramento</td>
-                    <td class="schedule-description">-</td>
+                    <td class="schedule-slot">-</td>
                   </tr>
                 </tbody>
               </table>
             </div>
-            -->
           </div>
         </section>
         <section id="local">
