Add grade palestras.

--- a/index.html
+++ b/index.html
@@ -102,60 +102,126 @@
                   <tr>
                     <th class="schedule-time">Horário</th>
                     <th class="schedule-slot">Auditório</th>
-                    <th class="schedule-description">Sala 1</th>
+                    <th class="schedule-empty">Sala 1</th>
                   </tr>
                 </thead>
                 <tbody>
                   <tr class="schedule-other">
                     <td class="schedule-time">8h30</td>
-                    <td class="schedule-slot">Recepção / Credenciamento
-                    </td>
-                    <td class="schedule-description">-
-                    </td>
+                    <td class="schedule-slot">Recepção / Credenciamento</td>
+                    <td class="schedule-empty">-</td>
                   </tr>
 
                   <tr class="schedule-other">
                     <td class="schedule-time">9h00</td>
-                    <td class="schedule-slot">Abertura
-                    </td>
-                    <td class="schedule-description">-
-                    </td>
+                    <td class="schedule-slot">Abertura</td>
+                    <td class="schedule-empty">-</td>
                   </tr>
 
                   <tr class="schedule-other">
                     <td class="schedule-time">09h15</td>
-                    <td class="schedule-slot">-</td>
-                    <td class="schedule-description">-</td>
+                    <td class="schedule-slot">
+                        <a href=#>
+                            <span class="description">
+                                Segurança Através de Gerência de Configurações
+                            </span>
+                            <span class="speaker">Jerônimo Zucco</span>
+                        </a>
+                    </td>
+                    <td class="schedule-slot">
+                        <a href=#>
+                            <span class="description">
+                                Introdução a aplicativos híbridos com o Phonegap
+                            </span>
+                            <span class="speaker">Eduardo Erlo</span>
+                        </a>
+                    </td>
                   </tr>
 
                   <tr class="schedule-other">
                     <td class="schedule-time">10h00</td>
-                    <td class="schedule-slot">-</td>
-                    <td class="schedule-slot">-</td>
+                    <td class="schedule-slot">
+                        <a href=#>
+                            <span class="description">
+                                Pythonificando a Universidade
+                            </span>
+                            <span class="speaker">João T. Molon, Luciano C. Cruz, Matheus Pereira</span>
+                        </a>
+                    </td>
+                    <td class="schedule-slot">
+                        <a href=#>
+                            <span class="description">
+                                Nuvem livre com owncloud
+                            </span>
+                            <span class="speaker">Bruno Barcarol Guimarães</span>
+                        </a>
+                    </td>
                   </tr>
 
                   <tr class="schedule-other">
                     <td class="schedule-time">10h45</td>
-                    <td class="schedule-slot">-</td>
-                    <td class="schedule-slot">-</td>
+                    <td class="schedule-slot">
+                        <a href=#>
+                            <span class="description">
+                                Internet: de Gangnam Style ao Marco Civil
+                            </span>
+                            <span class="speaker">Carlos Parisotto</span>
+                        </a>
+                    </td>
+                    <td class="schedule-slot">
+                        <a href=#>
+                            <span class="description">
+                                openSUSE, construindo uma comunidade
+                            </span>
+                            <span class="speaker">Domingos Teruel</span>
+                        </a>
+                    </td>
                   </tr>
 
                   <tr class="schedule-other">
                     <td class="schedule-time">11h30</td>
-                    <td class="schedule-slot">-</td>
-                    <td class="schedule-slot">-</td>
+                    <td class="schedule-slot">
+                        <a href=#>
+                            <span class="description">
+                                Ubuntu - LInux Para Seres Humanos
+                            </span>
+                            <span class="speaker">Clayton Eduardo Dausacker</span>
+                        </a>
+                    </td>
+                    <td class="schedule-slot">
+                        <a href=#>
+                            <span class="description">
+                                Trabalho Remoto com Vikings: ferramentas e macetes de muito longe
+                            </span>
+                            <span class="speaker">Miguel Grazziotin</span>
+                        </a>
+                    </td>
                   </tr>
 
                   <tr class="schedule-other">
                     <td class="schedule-time">12h15</td>
-                    <td class="schedule-slot">-</td>
-                    <td class="schedule-slot">-</td>
+                    <td class="schedule-slot">
+                        <a href=#>
+                            <span class="description">
+                                Produção Multimídia em Tecnologias Livres
+                            </span>
+                            <span class="speaker">Breno Dallas</span>
+                        </a>
+                    </td>
+                    <td class="schedule-slot">
+                        <a href=#>
+                            <span class="description">
+                                Apache CloudStack - O orquestrador para Clouds que realmente funciona
+                            </span>
+                            <span class="speaker">Marcelo Lima</span>
+                        </a>
+                    </td>
                   </tr>
 
                   <tr class="schedule-other">
                     <td class="schedule-time">13h00</td>
                     <td class="schedule-slot">Encerramento</td>
-                    <td class="schedule-slot">-</td>
+                    <td class="schedule-empty">-</td>
                   </tr>
                 </tbody>
               </table>
