Add descricao de palestra.

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
                       <ul class="nav navbar-nav">
                         <li style="display:none;"><a href="#sobre">Sobre</a></li>
                         <li><a href="#inscricao">Inscrições</a></li>
-                        <li><a href="#palestrantes">Palestrantes</a></li>
                         <li><a href="#programacao">Programação</a></li>
+                        <li><a href="#palestras">Palestras</a></li>
                         <li><a href="#local">Local</a></li>
                         <li><a href="#apoio">Apoio</a></li>
                       </ul>
@@ -85,14 +85,6 @@
           </div>
         </section>
         
-        <section id="palestrantes">
-        <div class="container">
-          <h2 class="subtitle">Palestrantes</h2>
-            <p>
-                Submissão encerrada em 24 de Agosto.
-            </p>
-            </div>
-        </section>
         <section id="programacao">
         <div class="container">
           <h2 class="subtitle">Programação</h2>
@@ -121,7 +113,7 @@
                   <tr class="schedule-other">
                     <td class="schedule-time">09h15</td>
                     <td class="schedule-slot">
-                        <a href=#>
+                        <a href=#speech-1>
                             <span class="description">
                                 Segurança Através de Gerência de Configurações
                             </span>
@@ -228,6 +220,26 @@
             </div>
           </div>
         </section>
+        <section id="palestras">
+        <div class="container">
+          <h2 class="subtitle">Palestras</h2>
+          <div id="speech-1" class=speech-container>
+            <h3 class="speech-title">
+                <span class="speech-time">09h15</span>
+                <span class="speech-title">Segurança Através de Gerência de Configurações</span>
+            </h3>
+            <div class="speech-info">
+                <span class="speech-description">
+                    Orchestration, ou Gerência de Configurações, descreve o arranjo, coordenação e gestão sistemas complexos de forma automatizada. Tradicionalmente, o conceito de orchestration foi utilizado principalmente no contexto da Nuvem, SOA e virtualização. A necessidade de entregar, implantar e manter aplicações de forma mais rápida fez com que o volume de mudanças em configurações aumentasse exponencialmente. Gerenciar as mudanças de forma rápida, segura e documentada é essencial para manter os aplicativos em execução.
+                </span>
+                <h3 class="speaker-name">Jeronimo Zucco</h3>
+                <span class="speaker-bio">
+                Bacharel em Ciência da Computação pela Universidade de Caxias do Sul e Pós-Graduado em Gerência e Segurança de Redes de Computadores também pela UCS. Certificado CISSP (Certified Information Systems Secure Profissional), membro do projeto OWASP (Open Web Application Security Project) desde 2010. Já palestrou em diversos eventos sobre o tema segurança de sistemas: You Shot The Sheriff, FISL, Tchelinux, Python Brasil, ABIN, PoaSec, GTS e OWASP.
+                </span>
+            </div>
+          </div>
+        </div>
+        </section>
         <section id="local">
         <div class="container">
           <h2 class="subtitle">Local</h2>
@@ -296,7 +308,7 @@
                 <div class="col-lg-12">
                     <ul class="list-inline" id="footer-menu">
                         <li class="active"><a href="#">TchêLinux</a></li>
-                        <li><a href="#palestrantes">Palestrantes</a></li>
+                        <li><a href="#palestras">Palestras</a></li>
                         <li><a href="#programacao">Programação</a></li>
                         <li><a href="#local">Local</a></li>
                         <li><a href="#apoio">Apoio</a></li>
