Add informacoes de palestras.

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                         </a>
                     </td>
                     <td class="schedule-slot">
-                        <a href=#>
+                        <a href=#speech-2>
                             <span class="description">
                                 Introdução a aplicativos híbridos com o Phonegap
                             </span>
@@ -133,7 +133,7 @@
                   <tr class="schedule-other">
                     <td class="schedule-time">10h00</td>
                     <td class="schedule-slot">
-                        <a href=#>
+                        <a href=#speech-3>
                             <span class="description">
                                 Pythonificando a Universidade
                             </span>
@@ -141,7 +141,7 @@
                         </a>
                     </td>
                     <td class="schedule-slot">
-                        <a href=#>
+                        <a href=#speech-4>
                             <span class="description">
                                 Nuvem livre com owncloud
                             </span>
@@ -153,7 +153,7 @@
                   <tr class="schedule-other">
                     <td class="schedule-time">10h45</td>
                     <td class="schedule-slot">
-                        <a href=#>
+                        <a href=#speech-5>
                             <span class="description">
                                 Internet: de Gangnam Style ao Marco Civil
                             </span>
@@ -161,7 +161,7 @@
                         </a>
                     </td>
                     <td class="schedule-slot">
-                        <a href=#>
+                        <a href=#speech-6>
                             <span class="description">
                                 openSUSE, construindo uma comunidade
                             </span>
@@ -173,7 +173,7 @@
                   <tr class="schedule-other">
                     <td class="schedule-time">11h30</td>
                     <td class="schedule-slot">
-                        <a href=#>
+                        <a href=#speech-7>
                             <span class="description">
                                 Ubuntu - LInux Para Seres Humanos
                             </span>
@@ -181,7 +181,7 @@
                         </a>
                     </td>
                     <td class="schedule-slot">
-                        <a href=#>
+                        <a href=#speech-8>
                             <span class="description">
                                 Trabalho Remoto com Vikings: ferramentas e macetes de muito longe
                             </span>
@@ -193,7 +193,7 @@
                   <tr class="schedule-other">
                     <td class="schedule-time">12h15</td>
                     <td class="schedule-slot">
-                        <a href=#>
+                        <a href=#speech-9>
                             <span class="description">
                                 Produção Multimídia em Tecnologias Livres
                             </span>
@@ -201,7 +201,7 @@
                         </a>
                     </td>
                     <td class="schedule-slot">
-                        <a href=#>
+                        <a href=#speech-10>
                             <span class="description">
                                 Apache CloudStack - O orquestrador para Clouds que realmente funciona
                             </span>
@@ -224,17 +224,176 @@
         <div class="container">
           <h2 class="subtitle">Palestras</h2>
           <div id="speech-1" class=speech-container>
-            <h3 class="speech-title">
-                <span class="speech-time">09h15</span>
-                <span class="speech-title">Segurança Através de Gerência de Configurações</span>
-            </h3>
+            <span class="speech-time">09h15</span>
             <div class="speech-info">
+                <h3 class="speech-title">
+                    Segurança Através de Gerência de Configurações
+                </h3>
                 <span class="speech-description">
                     Orchestration, ou Gerência de Configurações, descreve o arranjo, coordenação e gestão sistemas complexos de forma automatizada. Tradicionalmente, o conceito de orchestration foi utilizado principalmente no contexto da Nuvem, SOA e virtualização. A necessidade de entregar, implantar e manter aplicações de forma mais rápida fez com que o volume de mudanças em configurações aumentasse exponencialmente. Gerenciar as mudanças de forma rápida, segura e documentada é essencial para manter os aplicativos em execução.
                 </span>
                 <h3 class="speaker-name">Jeronimo Zucco</h3>
                 <span class="speaker-bio">
                 Bacharel em Ciência da Computação pela Universidade de Caxias do Sul e Pós-Graduado em Gerência e Segurança de Redes de Computadores também pela UCS. Certificado CISSP (Certified Information Systems Secure Profissional), membro do projeto OWASP (Open Web Application Security Project) desde 2010. Já palestrou em diversos eventos sobre o tema segurança de sistemas: You Shot The Sheriff, FISL, Tchelinux, Python Brasil, ABIN, PoaSec, GTS e OWASP.
+                </span>
+            </div>
+          </div>
+          <div id="speech-2" class=speech-container>
+            <span class="speech-time">09h15</span>
+            <div class="speech-info">
+                <h3 class="speech-title">
+                    Introdução a aplicativos híbridos com o Phonegap
+                </h3>
+                <span class="speech-description">
+                    Será apresentado uma introdução ao mundo dos aplicativos híbridos, onde será apresentado um exemplo de aplicativo exemplo desenvolvido na plataforma Phonegap.
+                </span>
+                <h3 class="speaker-name">Eduardo Erlo</h3>
+                <span class="speaker-bio">
+                Eduardo Erlo é formado em Ciência da Computação pela Universidade de Caxias do Sul - UCS
+
+                Já trabalhou em projetos de desenvolvimento de ERP, sistemas de vendas online, sistemas acadêmicos, sistemas fiscais e sistemas web de grande número de acessos.
+                Hoje trabalha como consultor autônomo em desenvolvimento de aplicações web de alta qualidade, utilizando como base tecnologias livres.
+                </span>
+            </div>
+          </div>
+          <div id="speech-3" class=speech-container>
+            <span class="speech-time">10h00</span>
+            <div class="speech-info">
+                <h3 class="speech-title">
+                    Pythonificando a Universidade
+                </h3>
+                <span class="speech-description">
+                    Multiplataforma, de fácil aprendizagem e alta produtividade, Python torna-se cada dia mais popular. Este trabalho procura abordar as principais características da linguagem e trazer um panorama de sua utilização nas universidades. A fim de demonstrar sua versatilidade serão apresentados trabalhos desenvolvidos no curso de Ciência da Computação da Universidade de Caxias do Sul, passando por implementações de grafos, redes, inteligencia artificial, sistemas distribuídos e computação gráfica.
+                </span>
+                <h3 class="speaker-name">João T. Molon</h3>
+                <span class="speaker-bio">
+                </span>
+                <h3 class="speaker-name">Luciano C. Cruz</h3>
+                <span class="speaker-bio">
+                </span>
+                <h3 class="speaker-name">Matheus Pereira</h3>
+                <span class="speaker-bio">
+                    Bacharel em Ciência da Computação pela UCS - Universidade de Caxias do Sul. Professor - FTEC Caxias do Sul. Pesquisador e desenvolvedor web - Instituto Communitas para o Desenvolvimento Humano e Tecnológico.
+                </span>
+            </div>
+          </div>
+          <div id="speech-4" class=speech-container>
+            <span class="speech-time">10h00</span>
+            <div class="speech-info">
+                <h3 class="speech-title">
+                    Nuvem livre com owncloud
+                </h3>
+                <span class="speech-description">
+                    Uma apresentação sobre o projeto e um guia prático para que pessoas com pouca ou nenhuma experiência com servidores e/ou owncloud possam fazer a instalação e configuração desse serviço de nuvem pessoal.
+                </span>
+                <h3 class="speaker-name">Bruno Barcarol Guimarães</h3>
+                <span class="speaker-bio">
+                Educação: graduação em Ciência da Computação pela Universidade de Caxias do Sul. Atuações profissionais: bolsista em dois projetos de pesquisa, programador e adminstrador de sistemas na Universdade de Caxias do Sul.
+                </span>
+            </div>
+          </div>
+          <div id="speech-5" class=speech-container>
+            <span class="speech-time">10h45</span>
+            <div class="speech-info">
+                <h3 class="speech-title">
+                    Internet: de Gangnam Style ao Marco Civil
+                </h3>
+                <span class="speech-description">
+                    Ah, a internet...um lugar onde há milhões de fotos de gatinhos e de fatos não confirmados sobre Chuck Norris(Chuck, se você estiver lendo isso, eu não duvido de nada, ok?). Mas a abrangência da internet é muita maior, ela se tornou uma ferramenta fantástica e ao mesmo tempo perigosa, mesmo para os mais experientes. De uma maneira interessante pretendo explorar sobre o rompimento de barreiras da internet, a rápida divulgação de informações, os cuidados com as informações, a influência sobre as eleições e o Marco Civil da Internet.
+                </span>
+                <h3 class="speaker-name">Carlos Parisotto</h3>
+                <span class="speaker-bio">
+                    Trabalho há 6 anos com Linux CentOS/Fedora/RedHat e sou Analista de Suporte na empresa Vendabem Informática. Palestrando em meu quarto Tchelinux, também possuo certificação LPIC-1 e CLA.
+                </span>
+            </div>
+          </div>
+          <div id="speech-6" class=speech-container>
+            <span class="speech-time">10h45</span>
+            <div class="speech-info">
+                <h3 class="speech-title">
+                    openSUSE, construindo uma comunidade.
+                </h3>
+                <span class="speech-description">
+                    Essa palestra irá explorar onde a comunidade openSUSE está atualmente
+                    e para onde está indo. Nossos projetos, esclarecer sobre as mudanças e
+                    continuidades da comunidade openSUSE nos últimos anos e projetos
+                    futuros.
+                </span>
+                <h3 class="speaker-name">Domingos Teruel</h3>
+                <span class="speaker-bio">
+                Tecnólogo em Processamento de dados e Gestão da Tecnologia da
+                Informação, especialista em interfaces de sistemas, atuando no
+                desenvolvimento e implementação de sistemas web com software livre e
+                Governo Eletrônico. Membro ativo das comunidades locais de PHP e Zend
+                Framework,KDE-SP e openSUSE como Local Coordinator para a América
+                Latina e Brasil.
+                </span>
+            </div>
+          </div>
+          <div id="speech-7" class=speech-container>
+            <span class="speech-time">11h30</span>
+            <div class="speech-info">
+                <h3 class="speech-title">
+                    Ubuntu - LInux Para Seres Humanos
+                </h3>
+                <span class="speech-description">
+                    Nesta palestra serão abordados aspectos referentes a uma breve história da criação do Movimento Software Livre e em seguida particularidades da distribuição GNU/Linux Ubuntu (história, versões, aplicativos e configurações básicas).
+                </span>
+                <h3 class="speaker-name">Clayton Eduardo Dausacker</h3>
+                <span class="speaker-bio">
+                Clayton Eduardo Dausacker
+                Técnico em Informática
+                Membro Tchêlinux.Org - Grupo de Usuários de Software Livre do Estado do RS
+                Sócio da Associação Software Livre.Org
+                Usuário GNU/Linux #449537
+                Acadêmico do Curso de Serviço Social - ULBRA
+                </span>
+            </div>
+          </div>
+          <div id="speech-8" class=speech-container>
+            <span class="speech-time">11h30</span>
+            <div class="speech-info">
+                <h3 class="speech-title">
+                    Trabalho Remoto com Vikings: ferramentas e macetes de muito longe
+                </h3>
+                <span class="speech-description">
+                    Nessa palestra vou apresentar um pouco da nossa experiência adquirida com o tão falado (e às vezes muito sonhado) trabalho remoto, para tornar as coisas mais interessantes não contentes em trabalhar remotamente o resto da nossa equipe está na Suécia, então ninguém se comunica na língua nativa e temos um fuso que gira entre 3h até 5h de diferença, nesses quase dois anos aprendemos algumas nuances de trabalhar com pessoas com uma cultura tão diferente e para nossa (nem-tão-grande) surpresa Linus Torvalds estava errado com a sua famosa frase, código é o mais fácil entre todos os desafios. Definitivamente nós acreditamos que "Code is cheap, show me how you talk", comunicação é tão ou mais importante que habilidades técnicas, veja como estamos trabalhando com esse pessoal há quase dois anos sem falar uma palavra em sueco.
+                </span>
+                <h3 class="speaker-name">Miguel Grazziotin</h3>
+                <span class="speaker-bio">
+                Desenvolvedor de software com a mesma impressão de que não sabe nada há quase 10 anos, trabalhando principalmente com Ruby, Javascript, web em geral e seus frameworks. Empolga-se fácil com novas tecnologias e paradigmas mas principalmente com diferentes pessoas, relacionamentos e pontos de vista. Ciclista, agilista, "startupzista" e aspirante a kungfuzero.
+                </span>
+            </div>
+          </div>
+          <div id="speech-9" class=speech-container>
+            <span class="speech-time">12h15</span>
+            <div class="speech-info">
+                <h3 class="speech-title">
+                    Produção Multimídia em Tecnologias Livres
+                </h3>
+                <span class="speech-description">
+                    Através desta, busca-se realizar uma reflexão sobre produção multimídia no Linux. Design, audiovisual, animação, produção musical, qual a possibilidade de realização destas produções a partir do software livre? Aqui, não trataremos de nos deter em um programa apenas; trata-se de uma discussão sobre a possibilidade da produção multimídia a partir das tecnologias livres; suas dificuldades, principais desafios, recentes progressões. Produções audiovisuais, gráficas e de audio serão revistas também para considerar suas possibilidades e potenciais.
+                </span>
+                <h3 class="speaker-name">Breno Dallas</h3>
+                <span class="speaker-bio">
+                Breno Dallas é graduado em filosofia, e por anos exerceu docência na área das ciências humanas no Ensino Médio e em projetos de Educação e Vivência. Atualmente realiza atividades no campo da produção e gestão cultural. É realizador de uma série de festivais, mostras e atividades na área do cinema e da música. Em seu currículo constam atividades no Grupo ManiFestaSol, Festival Brasileiro de Música de Rua, Mostra Música Daqui, Grito Rock, Jornada Audiovisual, Semana do Audiovisual, Primavera do Ser, PósTV, entre outros. Também desenvolve trabalhos na área da comunicação, relacionados diretamente com mídias sociais. Atualmente faz parte do Núcleo Audiovisual TME, ponto de cultura de Caxias do Sul, onde ministra cursos de design e audiovisual em software livre, também atuando como disseminador do software livre na produção multimídia.
+                </span>
+            </div>
+          </div>
+          <div id="speech-10" class=speech-container>
+            <span class="speech-time">12h15</span>
+            <div class="speech-info">
+                <h3 class="speech-title">
+                    Apache CloudStack - O orquestrador para Clouds que realmente funciona
+                </h3>
+                <span class="speech-description">
+                    O objetivo desta palestra é apresentar a plataforma de gerenciamento de nuvens considerada a mais estável e também a preferida por administradores de infraestruturas de Cloud, o Apache CloudStack. Desmistificar os mitos em relação a outras ferramentas e demonstrar de maneira prática e detalhada o seu funcionamento.
+                </span>
+                <h3 class="speaker-name">Marcelo Lima</h3>
+                <span class="speaker-bio">
+                Bacharel em Ciência da Computação pela Universidade de Caxias do Sul e Pós-Graduado em Gerência e Segurança de Redes de Computadores também pela UCS. Certificado CISSP (Certified Information Systems Secure Profissional), membro do projeto OWASP (Open Web Application Security Project) desde 2010. Já palestrou em diversos eventos sobre o tema segurança de sistemas: You Shot The Sheriff, FISL, Tchelinux, Python Brasil, ABIN, PoaSec, GTS e OWASP.
+                Consultor Sênior na empresa ShapeBlue, maior integrador independente da plataforma Apache CloudStack no mundo.
+                Especialista na construção de nuvens privadas e públicas, engenheiro de redes com larga experiência em ambientes complexos de Data Center no Brasil e exterior.
                 </span>
             </div>
           </div>
