Add palestrantes info.

--- a/index.html
+++ b/index.html
@@ -267,9 +267,11 @@
                 </span>
                 <h3 class="speaker-name">João T. Molon</h3>
                 <span class="speaker-bio">
+                Bacharel em Ciência da Computação pela Universidade de Caxias do Sul, atua com desenvolvimento de software há cerca de 6 anos. Atualmente é desenvolvedor Python/Zope/Plone no Instituto Communitas para o Desenvolvimento Humano e Tecnológico.
                 </span>
                 <h3 class="speaker-name">Luciano C. Cruz</h3>
                 <span class="speaker-bio">
+                Programador Python, WEB com Zope/Plone. Diretor técnico na empresa HaDiCom. Bacharelando em Ciência da Computação pela Universidade de Caxias do Sul.
                 </span>
                 <h3 class="speaker-name">Matheus Pereira</h3>
                 <span class="speaker-bio">
