Add numero de salas.

--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
                 <thead>
                   <tr>
                     <th class="schedule-time">Horário</th>
-                    <th class="schedule-slot">Auditório</th>
-                    <th class="schedule-empty">Sala 1</th>
+                    <th class="schedule-slot">Auditório - 303</th>
+                    <th class="schedule-empty">Sala - 310</th>
                   </tr>
                 </thead>
                 <tbody>
